--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,29 +11,24 @@ services:
             - "8000:80"
             - "3000:443"
         environment:
-            - NGINX_HOST=${NGINX_HOST}
+            - NGINX_HOST=localhost
         command: /bin/sh -c "envsubst '$$NGINX_HOST' < /etc/nginx/conf.d/default.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
         restart: always
         depends_on:
             - php
             - mysqldb
     php:
-        image: nanoninja/php-fpm:${PHP_VERSION}
+        image: nanoninja/php-fpm:latest
         restart: always
         volumes:
             - "./etc/php/php.ini:/usr/local/etc/php/conf.d/php.ini"
             - "./web:/var/www/html"
     mysqldb:
-        image: mysql:${MYSQL_VERSION}
-        container_name: ${MYSQL_HOST}
+        image: mysql:latest
+        container_name: mysqldb2
         restart: always
-        env_file:
-            - ".env"
         environment:
-            - MYSQL_DATABASE=${MYSQL_DATABASE}
-            - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-            - MYSQL_USER=${MYSQL_USER}
-            - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+            - MYSQL_ROOT_PASSWORD=test123
         ports:
             - "8989:3306"
         volumes:
